--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.4.2
 jedi==0.13.3
 Jinja2==2.10.1
+joblib==0.13.2
 jsonschema==3.0.1
 jupyter==1.0.0
 jupyter-client==5.2.4
@@ -36,6 +37,8 @@ python-dateutil==2.8.0
 pytz==2019.1
 pyzmq==18.0.1
 qtconsole==4.4.4
+scikit-learn==0.21.1
+scipy==1.3.0
 Send2Trash==1.5.0
 six==1.12.0
 terminado==0.8.2
